# savanoriai

./: .gitignore  Makefile  setup.cfg  setup.py
config/: assets.cfg  base.cfg  versions.cfg
config/env/: production.cfg  staging.cfg  vagrant.cfg
savanoriai/: urls.py  wsgi.py
savanoriai/admin/: __init__.py  apps.py
savanoriai/admin/templates/admin/: base_site.html
savanoriai/core/: __init__.py  admin.py  allauth.py  apps.py  autocomplete_light_registry.py  factories.py  forms.py  management.py  menu.py  models.py  services.py  urls.py  views.py
savanoriai/core/management/commands/: importplaces.py
savanoriai/core/migrations/: 0001_initial.py  0002_auto_20151230_1918.py  0003_place.py  0004_auto_20160101_2132.py  0005_auto_20160101_2136.py  0006_auto_20160101_2213.py  0007_auto_20160102_1056.py  0008_auto_20160103_1347.py  0009_auto_20160103_1548.py  0010_auto_20160123_0946.py  0011_auto_20160123_1424.py  0012_auto_20160124_1803.py  0013_auto_20160124_2047.py  0014_auto_20160131_1648.py
savanoriai/core/static/css/: main.scss
savanoriai/core/static/js/: scripts.js
savanoriai/core/templates/: 404.html  500.html  base.html
savanoriai/core/templates/account/: login.html  profile.html  signup.html
savanoriai/core/templates/emails/: volunteer_accept_message.txt  volunteer_accept_subject.txt  volunteer_invitation_message.txt  volunteer_invitation_subject.txt
savanoriai/core/templates/organisations/: base.html  profile.html  signup.html  volunteers_list.html
savanoriai/core/templates/volunteers/: confirm.html
savanoriai/core/templatetags/: savanoriaitags.py
savanoriai/core/tests/: test_admin.py  test_views.py  utils.py
savanoriai/locale/lt/LC_MESSAGES/: django.po
savanoriai/settings/: base.py  development.py  production.py
scripts/: genconfig.py
(+2 files in other folders)
