[metadata]
name = maistobankas-savanoriai
author = Mantas Zimnickas
author-email = sirexas@gmail.com
summary = Maisto banko savanorių duomenų bazė
description-file = README.rst
home-page = https://github.com/sirex/maistobankas-savanoriai
license = AGPL
requires-dist =
    pytz
    Django
    django-environ
    django-allauth
    django-autocomplete-light
    django-bootstrap-form
    django-compressor
    django-libsass
    django-webtest
    pytest-django
    pytest-mock
    tqdm

[files]
packages = savanoriai
