[metadata]
name = maistobankas-savanoriai
author = Mantas Zimnickas
author-email = sirexas@gmail.com
summary = Maisto banko savanorių duomenų bazė
description-file = README.rst
home-page = https://github.com/sirex/maistobankas-savanoriai
license = AGPL
requires-dist =
    pytz
    funcy
    Django
    django-environ
    django-allauth
    django-autocomplete-light
    django-bootstrap-form
    django-compressor
    django-libsass
    django-webtest
    django-navutils
    django-qurl
    django-debug-toolbar
    pytest-django
    pytest-mock
    factory_boy
    tqdm
    itsdangerous
    psycopg2

[files]
packages = savanoriai
